@@ -22,10 +22,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -78,19 +79,18 @@ public class AuthServiceImpl implements AuthService {
      * Method use for signIn appUser
      * @param payload
      * @return AppResponse
+     * @throws Exception
      * */
     @Override
     public AppResponse signInAppUser(LoginRequest payload) throws Exception {
-        logger.info("Request signInAppUser :- " + payload);
+        logger.info("Request signInAppUser :- {}.", payload);
         // spring auth manager will call user detail service
-        Authentication authentication = this.authenticationManager.authenticate(
-             new UsernamePasswordAuthenticationToken(payload.getUsername(), payload.getPassword()));
+        Authentication authentication = this.authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(payload.getUsername(), payload.getPassword()));
         SecurityContextHolder.getContext().setAuthentication(authentication);
         // get the user detail from authentication
         UserSessionDetail userDetails = (UserSessionDetail) authentication.getPrincipal();
-        String jwtToken = this.jwtUtils.generateTokenFromUsername(userDetails.getUsername());
         RefreshToken refreshToken = this.refreshTokenService.createRefreshToken(userDetails.getId(), payload.getIpAddress());
-        AuthResponse authResponse = new AuthResponse(jwtToken, refreshToken.getToken());
+        AuthResponse authResponse = new AuthResponse(this.jwtUtils.generateTokenFromUsername(userDetails.getUsername()), refreshToken.getToken());
         authResponse.setIpAddress(payload.getIpAddress());
         return new AppResponse(BarcoUtil.SUCCESS, MessageUtil.USER_SUCCESSFULLY_AUTHENTICATE, this.getAuthResponseDetail(authResponse, userDetails));
     }
@@ -99,10 +99,11 @@ public class AuthServiceImpl implements AuthService {
      * Method use for signUp appUser as user-customer
      * @param payload
      * @return AppResponse
+     * @throws Exception
      * */
     @Override
     public AppResponse signupAppUser(SignupRequest payload) throws Exception {
-        logger.info("Request signupAppUser :- " + payload);
+        logger.info("Request signupAppUser :- {}.", payload);
         if (BarcoUtil.isNull(payload.getFirstName())) {
             return new AppResponse(BarcoUtil.ERROR, MessageUtil.FIRST_NAME_MISSING);
         } else if (BarcoUtil.isNull(payload.getLastName())) {
@@ -133,34 +134,28 @@ public class AuthServiceImpl implements AuthService {
          * AND THEY WILL GET THE NORMAL ACCOUNT TYPE
          * AND THEY WILL GET THE USER DEFAULT PROFILE
          * AND THEY WILL GET THE USER DEFAULT USER ROLE
+         * => admin can change the account type and profile type and role type
          * **/
         // register user will get the default role USER
-        Optional<Role> userRole = this.roleRepository.findByNameAndStatus(
-            this.lookupDataCacheService.getParentLookupDataByParentLookupType(LookupUtil.DEFAULT_ROLE).getLookupValue(), APPLICATION_STATUS.ACTIVE);
-        if (userRole.isPresent()) {
-            appUser.setAppUserRoles(Set.of(userRole.get()));
-        }
+        this.roleRepository.findByNameAndStatus(this.lookupDataCacheService.getParentLookupDataByParentLookupType(
+           LookupUtil.DEFAULT_ROLE).getLookupValue(), APPLICATION_STATUS.ACTIVE).ifPresent(role -> appUser.setAppUserRoles(Set.of(role)));
         // register user will get the default profile USER
-        Optional<Profile> userProfile = this.profileRepository.findProfileByProfileName(
-            this.lookupDataCacheService.getParentLookupDataByParentLookupType(LookupUtil.DEFAULT_PROFILE).getLookupValue());
-        if (userProfile.isPresent()) {
-            appUser.setProfile(userProfile.get());
-        }
+        this.profileRepository.findProfileByProfileName(this.lookupDataCacheService.getParentLookupDataByParentLookupType(
+           LookupUtil.DEFAULT_PROFILE).getLookupValue()).ifPresent(appUser::setProfile);
         // register user account type as 'Customer'
-        appUser.setAccountType(ACCOUNT_TYPE.NORMAL);
+        appUser.setAccountType(ACCOUNT_TYPE.CUSTOMER);
         this.appUserRepository.save(appUser);
         // notification & register email
         Optional<AppUser> superAdmin = this.appUserRepository.findByUsernameAndStatus(
             this.lookupDataCacheService.getParentLookupDataByParentLookupType(LookupUtil.ROOT_USER).getLookupValue(), APPLICATION_STATUS.ACTIVE);
         if (superAdmin.isPresent()) {
             // linking all env variable to the user give by the system
-            for (EnvVariables envVariables : this.envVariablesRepository.findAllByCreatedByAndStatusNotOrderByDateCreatedDesc(
-                superAdmin.get(), APPLICATION_STATUS.DELETE)) {
+            for (EnvVariables envVariables : this.envVariablesRepository.findAllByCreatedByAndStatusNotOrderByDateCreatedDesc(superAdmin.get(), APPLICATION_STATUS.DELETE)) {
                 this.appUserEnvRepository.save(this.getAppUserEnv(superAdmin.get(), appUser, envVariables));
             }
             // event bridge only receiver event bridge if exist and create by the main user
             for (EventBridge eventBridge : this.eventBridgeRepository.findAllByBridgeTypeInAndCreatedByAndStatusNotOrderByDateCreatedDesc(
-                Arrays.asList(EVENT_BRIDGE_TYPE.WEB_HOOK_RECEIVE), superAdmin.get(), APPLICATION_STATUS.DELETE)) {
+                List.of(EVENT_BRIDGE_TYPE.WEB_HOOK_RECEIVE), superAdmin.get(), APPLICATION_STATUS.DELETE)) {
                 LinkEBURequest linkEBURequest = new LinkEBURequest();
                 linkEBURequest.setId(eventBridge.getId());
                 linkEBURequest.setAppUserId(appUser.getId());
@@ -179,15 +174,15 @@ public class AuthServiceImpl implements AuthService {
      * Method use to send email the forgot password
      * @param payload
      * @return AuthResponse
+     * @throws Exception
      * */
     @Override
     public AppResponse forgotPassword(ForgotPasswordRequest payload) throws Exception {
-        logger.info("Request forgotPassword :- " + payload);
+        logger.info("Request forgotPassword :- {}.", payload);
         if (BarcoUtil.isNull(payload.getEmail())) {
             return new AppResponse(BarcoUtil.ERROR, MessageUtil.EMAIL_MISSING);
         }
-        Optional<AppUser> appUser = this.appUserRepository.findByEmailAndStatus(
-            payload.getEmail(), APPLICATION_STATUS.ACTIVE);
+        Optional<AppUser> appUser = this.appUserRepository.findByEmailAndStatus(payload.getEmail(), APPLICATION_STATUS.ACTIVE);
         if (appUser.isPresent()) {
             // email and notification
             this.sendForgotPasswordEmail(appUser.get(), this.lookupDataCacheService, this.templateRegRepository, this.emailMessagesFactory, this.jwtUtils);
@@ -202,10 +197,11 @@ public class AuthServiceImpl implements AuthService {
      * Method use to reset app user password
      * @param payload
      * @return AppResponse
+     * @throws Exception
      * */
     @Override
     public AppResponse resetPassword(PasswordResetRequest payload) throws Exception {
-        logger.info("Request resetPassword :- " + payload);
+        logger.info("Request resetPassword :- {}.", payload);
         if (BarcoUtil.isNull(payload.getSessionUser().getEmail())) {
             return new AppResponse(BarcoUtil.ERROR, MessageUtil.EMAIL_MISSING);
         } else if (BarcoUtil.isNull(payload.getNewPassword())) {
@@ -226,12 +222,13 @@ public class AuthServiceImpl implements AuthService {
      * Method generate new token base on refresh token
      * @param payload
      * @return AppResponse
+     * @throws Exception
      * */
     @Override
     public AppResponse authClamByRefreshToken(TokenRefreshRequest payload) throws Exception {
-        logger.info("Request authClamByRefreshToken :- " + payload);
+        logger.info("Request authClamByRefreshToken :- {}.", payload);
         Optional<RefreshToken> refreshToken = this.refreshTokenService.findByToken(payload.getRefreshToken());
-        if (!refreshToken.isPresent()) {
+        if (refreshToken.isEmpty()) {
             return new AppResponse(BarcoUtil.ERROR, String.format(MessageUtil.DATA_NOT_FOUND, MessageUtil.REFRESH_TOKEN), payload);
         }
         AppResponse appResponse = this.refreshTokenService.verifyExpiration(refreshToken.get());
@@ -245,10 +242,11 @@ public class AuthServiceImpl implements AuthService {
      * Method use to delete the token to log Out the session
      * @param payload
      * @return AppResponse
+     * @throws Exception
      * */
     @Override
     public AppResponse logoutAppUser(TokenRefreshRequest payload) throws Exception {
-        logger.info("Request logoutAppUser :- " + payload);
+        logger.info("Request logoutAppUser :- {}.", payload);
         return this.refreshTokenService.deleteRefreshToken(payload);
     }
 
@@ -257,6 +255,7 @@ public class AuthServiceImpl implements AuthService {
      * @param authResponse
      * @param userDetails
      * @return AuthResponse
+     * @throws Exception
      * */
     private AuthResponse getAuthResponseDetail(AuthResponse authResponse, UserSessionDetail userDetails) throws Exception {
         authResponse.setId(userDetails.getId());
@@ -266,8 +265,7 @@ public class AuthServiceImpl implements AuthService {
         authResponse.setUsername(userDetails.getUsername());
         authResponse.setProfileImage(userDetails.getProfileImage());
         authResponse.setIpAddress(userDetails.getIpAddress());
-        authResponse.setRoles(userDetails.getAuthorities().stream()
-           .map(grantedAuthority -> grantedAuthority.getAuthority()).collect(Collectors.toList()));
+        authResponse.setRoles(userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
         if (!BarcoUtil.isNull(userDetails.getProfile())) {
             authResponse.setProfile(this.getProfilePermissionResponse(userDetails.getProfile()));
         }
